Added everything back

--- a/FileStorage/Smile.html
+++ b/FileStorage/Smile.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body class="Smile">
-    <img src="Img/smile.webp" alt="Emoji man smiling">
+    <img src="../Img/smile.webp" alt="Emoji man smiling">
 
 
 
