--- a/FileStorage/Socials.html
+++ b/FileStorage/Socials.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Socials</title>
+    <title>Document</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -34,10 +34,10 @@
                     <p>Als uw wilt dat ik maak een site voor jouw, of heeft gewoon vragen, dan vul in deze formulier.
                     </p>
 
-                    <form action="Untitled-1.html">
+                    <form action="">
                         <h3>Contact</h3>
 
-                        <label for="Name">Jou email:</label>
+                        <label for="Naam">Jou email:</label>
                         <input type="email" placeholder="Rick Astley@domainname.com" id="Naam" required>
 
                         <label for="Age">Leeftijd</label>
@@ -289,8 +289,8 @@
                         </select>
 
 
-                        <label for="Reason">Je vraag of aanmerking</label>
-                        <input type="text" class="Waarom" required>
+                        <label for="Waarom">Je vraag of aanmerking</label>
+                        <input type="text" id="Waarom" required>
 
                         <input type="submit" value="Inlever vragenlist">
 
