--- a/FileStorage/index.html
+++ b/FileStorage/index.html
@@ -24,22 +24,22 @@
     </nav>
 
 
-    <heading class="Intro" id="Intro">
+    <header class="Intro" id="Intro">
         <h1 class="Hello">Hallo lezer.</h1>
 
         <h2>Mijn naam is Leo!</h2>
 
 
 
-    </heading>
+    </header>
 
     <main>
         <section class="HomePage">
             <div>
                 <h3>En ik ben een web developer</h3>
-                <p>Hier ga ik je laten zien wat ik heb <a class="Bijzonder" href="#projects"> gedaan </a> (en wat ik wil
+                <p>Hier ga ik je laten zien wat ik heb <a class="Bijzonder" href="Projects.html"> gedaan </a> (en wat ik wil
                     later doen)!</p>
-                <img src="Img/ai-image.png" alt="Image of an Ai generated version of me">
+                <img src="../Img/ai-image.png" alt="Image of an Ai generated version of me">
             </div>
         </section>
 
