--- a/FileStorage/Projects.html
+++ b/FileStorage/Projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects</title>
+    <title>Document</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
@@ -29,7 +29,7 @@
     <div class="project-container">
         <div class="project-card">
             <h3>Project 1</h3>
-            <img src="Img/placeholder2.webp" alt="placeholder">
+            <img src="../Img/placeholder2.webp" alt="placeholder">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui a, quae odio earum ad dolore laboriosam
                 ratione expedita. Accusamus quidem modi iure tenetur iusto eum assumenda non praesentium sit illo.
             </p>
@@ -37,7 +37,7 @@
 
         <div class="project-card">
             <h3>Project 2</h3>
-            <img src="Img/placeholder2.webp" alt="placeholder">
+            <img src="../Img/placeholder2.webp" alt="placeholder">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui a, quae odio earum ad dolore laboriosam
                 ratione expedita. Accusamus quidem modi iure tenetur iusto eum assumenda non praesentium sit illo.
             </p>
@@ -48,7 +48,7 @@
     <div class="project-container">
         <div class="project-card">
             <h3>Project 3</h3>
-            <img src="Img/placeholder2.webp" alt="placeholder">
+            <img src="../Img/placeholder2.webp" alt="placeholder">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui a, quae odio earum ad dolore laboriosam
                 ratione expedita. Accusamus quidem modi iure tenetur iusto eum assumenda non praesentium sit illo.
             </p>
@@ -57,7 +57,7 @@
 
         <div class="project-card">
             <h3>Project 4</h3>
-            <img src="Img/placeholder2.webp" alt="placeholder">
+            <img src="../Img/placeholder2.webp" alt="placeholder">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui a, quae odio earum ad dolore laboriosam
                 ratione expedita. Accusamus quidem modi iure tenetur iusto eum assumenda non praesentium sit illo.
             </p>
@@ -66,7 +66,7 @@
 
         <div class="project-card">
             <h3>Project 5</h3>
-            <img src="Img/placeholder2.webp" alt="placeholder">
+            <img src="../Img/placeholder2.webp" alt="placeholder">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui a, quae odio earum ad dolore laboriosam
                 ratione expedita. Accusamus quidem modi iure tenetur iusto eum assumenda non praesentium sit illo.
             </p>
