Added a .js file
Also fixed contact page screen(width was whole view port on mobile and smaller devices)

--- a/FileStorage/Projects.html
+++ b/FileStorage/Projects.html
@@ -16,7 +16,7 @@
             <li><a href="Interview.html">Interview</a></li>
             <li><a href="Socials.html">Contact</a></li>
         </ul>
-
+        <script src="main.js"></script>
 
     </nav>
 
