--- a/FileStorage/About-me.html
+++ b/FileStorage/About-me.html
@@ -20,7 +20,7 @@
             <li><a href="Socials.html">Contact</a></li>
         </ul>
 
-
+        <script src="main.js"></script>
     </nav>
 
 
