--- a/FileStorage/Socials.html
+++ b/FileStorage/Socials.html
@@ -16,7 +16,7 @@
             <li><a href="Interview.html">Interview</a></li>
             <li><a href="Socials.html">Contact</a></li>
         </ul>
-
+        <script src="main.js"></script>
 
     </nav>
 
