Added a cookie notification

--- a/FileStorage/index.html
+++ b/FileStorage/index.html
@@ -8,9 +8,24 @@
     <link rel="stylesheet" href="main.css">
 </head>
 
-<body>
+<body class="Light_Mode">
+<script src="main.js"></script>
 
-   
+<div id="Cookie-Melding">
+    <h1>Cookie Melding!</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem, fugiat ipsam molestiae omnis provident quod
+        sint? Accusantium alias aspernatur dolorum nemo nulla quibusdam saepe temporibus. Asperiores facere mollitia
+        placeat repellendus!</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium adipisci architecto dolor fugiat incidunt
+        necessitatibus nihil quibusdam quidem, tempore voluptates. Eaque enim harum inventore ipsa vero. Aspernatur
+        eaque incidunt necessitatibus.</p>
+
+    <button onclick="cookie_melding_Accept()">Accept</button> <button onclick="cookie_melding_Reject()">Reject</button>
+</div>
+
+
+
+
     <nav class="Heading" id="Home">
         <ul>
             <li><a href="index.html">Home</a></li>
@@ -20,7 +35,7 @@
             <li><a href="Socials.html">Contact</a></li>
         </ul>
 
-        <script src="main.js"></script>
+
     </nav>
 
 
