Added a cookie notification

--- a/FileStorage/Interview.html
+++ b/FileStorage/Interview.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<body class="Light_Mode">
+<body >
 <nav class="Heading" id="Home">
     <ul>
         <li><a href="index.html">Home</a></li>
@@ -124,7 +124,9 @@
 
     </article>
 </section>
-
+<div class="Button">
+    <button  onclick="DarkMode()">Light/Dark</button>
+</div>
 
 </body>
 </html>
