--- a/FileStorage/Socials.html
+++ b/FileStorage/Socials.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="main.css">
 </head>
-<body class="Light_Mode">
+<body >
 
 <nav class="Heading" id="Home">
     <ul>
@@ -312,7 +312,9 @@
 </footer>
 
 
-<p>lor</p>
+<div class="Button">
+    <button  onclick="DarkMode()">Light/Dark</button>
+</div>
 
 
 </body>
