--- a/FileStorage/index.html
+++ b/FileStorage/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="main.css">
 </head>
 
-<body class="Light_Mode">
+<body id="Light_Mode">
 <script src="main.js"></script>
 
 <div id="Cookie-Melding">
@@ -52,7 +52,7 @@
         <section class="HomePage">
             <div>
                 <h3>En ik ben een web developer</h3>
-                <p>Hier ga ik je laten zien wat ik heb <a class="Bijzonder" href="Projects.html"> gedaan </a> (en wat ik wil
+                <p>Hier ga ik je laten zien wat ik heb<a class="Bijzonder" href="Projects.html"> gedaan</a>(en wat ik wil
                     later doen)!</p>
                 <img src="../Img/ai-image.png" alt="Image of an Ai generated version of me">
             </div>
@@ -62,14 +62,14 @@
 
 
 
-
-
-
+<div class="Button">
+<button  onclick="DarkMode()">Light/Dark</button>
+</div>
 
     <!-- Ik heb ai gevraagd HOE JE MOET een tabel maken want het is sneller en je kan gewoon vragen stellen -->
     <!-- Ik heb ai gevraagd HOE JE MOET een video zetten, want ik zag wel de video tag, maar wist niet over de type tag -->
     <!-- Ik heb ai gevraagd voor een mooie achtergrond kleur -->
-    <!--Ik heb de lijst van landen gepaakt van stack overflow maar de ander formulier vragen waren gewoon van mij -->
+    <!--Ik heb de lijst van landen gepakt van stack overflow, maar de ander formulier vragen waren gewoon van mij -->
 
 </body>
 
