--- a/FileStorage/About-me.html
+++ b/FileStorage/About-me.html
@@ -17,6 +17,7 @@
         <li><a href="Projects.html">Projects</a></li>
         <li><a href="Interview.html">Interview</a></li>
         <li><a href="Socials.html">Contact</a></li>
+
     </ul>
 
     <script src="main.js"></script>
@@ -25,7 +26,7 @@
 
 <section id="about">
     <article class="about">
-        <div>
+        <div >
             <h2>Over mij</h2>
             <p>Hallo! Zoals ik net zei, mijn naam is Leo en ik ben een nieuwe developer. Ik ben begonnen met
                 HTML-CSS.
@@ -83,6 +84,9 @@
 
 
 </section>
+<div class="Button">
+    <button  onclick="DarkMode()">Light/Dark</button>
+</div>
 
 </body>
 </html>
