--- a/FileStorage/Assets/navbar.html
+++ b/FileStorage/Assets/navbar.html
@@ -1,12 +1,12 @@
 <nav class="Heading" id="Home">
   <ul>
-    <li><a href="index.php">Home</a></li>
-    <li><a href="About-me.php">Over mij</a></li>
-    <li><a href="Projects.php">Projects</a></li>
-    <li><a href="Interview.php">Interview</a></li>
-    <li><a href="Socials.php">Contact</a></li>
+    <li><a href="../PhP/index.php">Home</a></li>
+    <li><a href="../PhP/About-me.php">Over mij</a></li>
+    <li><a href="../PhP/Projects.php">Projects</a></li>
+    <li><a href="../PhP/Interview.php">Interview</a></li>
+    <li><a href="../PhP/Socials.php">Contact</a></li>
 
   </ul>
 
-  <script src="main.js"></script>
+  <script src="../JS/main.js"></script>
 </nav>
