Added a shitty hamburger menu(I did use AI to help me, mainly with js)

--- a/FileStorage/Assets/mobileBar.html
+++ b/FileStorage/Assets/mobileBar.html
@@ -1,1 +1,17 @@
-<button onclick=""></button>
+<nav class="Heading" id="Home">
+    <ul>
+        <li><a href="../PhP/index.php">Home</a></li>
+        <li><a href="../PhP/About-me.php">Over mij</a></li>
+        <li><a href="../PhP/Projects.php">Projects</a></li>
+        <li><a href="../PhP/Interview.php">Interview</a></li>
+        <li><a href="../PhP/Socials.php">Contact</a></li>
+
+    </ul>
+
+    <script src="../JS/main.js"></script>
+</nav>
+
+
+<button id="EnableMenu"  onclick="toggleMenu()">
+    <img src="../Img/download.png" alt="None">
+</button>
