--- a/FileStorage/Assets/navbar.html
+++ b/FileStorage/Assets/navbar.html
@@ -1,12 +1,14 @@
 <nav class="Heading" id="Home">
-  <ul>
-    <li><a href="../PhP/index.php">Home</a></li>
-    <li><a href="../PhP/About-me.php">Over mij</a></li>
-    <li><a href="../PhP/Projects.php">Projects</a></li>
-    <li><a href="../PhP/Interview.php">Interview</a></li>
-    <li><a href="../PhP/Socials.php">Contact</a></li>
+    <ul id="NavBar" class = "menuHidden">
+        <li ><a href="../PhP/index.php">Home</a></li>
+        <li ><a href="../PhP/About-me.php">Over mij</a></li>
+        <li ><a href="../PhP/Projects.php">Projects</a></li>
+        <li ><a href="../PhP/Interview.php">Interview</a></li>
+        <li ><a href="../PhP/Socials.php">Contact</a></li>
 
-  </ul>
-
-  <script src="../JS/main.js"></script>
+    </ul>
+    <button id="EnableMenu" class="EnableMenu" onclick="toggleMenu()">
+        <img src="../Img/download.png" alt="None">
+    </button>
+    <script src="../JS/main.js"></script>
 </nav>
